[package]
name = "azifirsteframe"
version = "0.1.0"
authors = ["Azi Crawford <azicrawford@gmail.com>"]
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.33.0"
log = "0.4.28"
serde = "1.0.228"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
