[package]
name = "azifirsteframe"
version = "0.1.0"
authors = ["Azi Crawford <azicrawford@gmail.com>"]
edition = "2024"

[dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.33.0"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.120"
image = "0.24.9"
thiserror = "2.0.17"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"

[package.metadata.bundle]
name  = "WOA Blog Updater"
identifier = "com.wizardofarc.woablogupdater"
icon = ["assets/woa_logo_only.png"]
